<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onnx_yolov5_ros</name>
  <version>0.0.0</version>
  <description>ROS2 node that uses ONNX GPU Runtime to inference YOLOv5</description>
  <maintainer email="42513874+Interpause@users.noreply.github.com">John-Henry Lim</maintainer>
  <license>MIT</license>
  
  <exec_depend>python3-onnxruntime-gpu-pip</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>nicepynode</exec_depend>
  <exec_depend>nicefaces</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!--Used for ImageMarkerArray definition-->
  <exec_depend>foxglove_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
